--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               плат LGA1700, основним нововведенням яких стала опція Intel
               Baseline Profile. Вона дозволяє швидко скинути всі налаштування
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="pages/article.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
         <div class="card col-4" style="width: 25rem">
