--- a/pages/article.html
+++ b/pages/article.html
@@ -16,7 +16,7 @@
     <header class="conteiner">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">IT Navigator</a>
+          <a class="navbar-brand" href="../index.html">IT Navigator</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
